--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@wavesurfer/react": "^1.0.6",
+    "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.2.4",
     "next": "14.2.3",
     "react": "^18",
     "react-audio-player": "^0.17.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
+    "wavesurfer-react": "^3.0.2",
+    "wavesurfer.js": "^7.7.15"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/wavesurfer.js": "^6.0.12",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
